--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>first HEADER</h1>
     <h2>second header</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    <h3>third header</h3>
 </body>
 </html>
